@@ -81,9 +81,9 @@ cb057190ba0a961768224e4dc6883104c6f945b2bf2ef90d7da39e7c1834f7ff  libusb-1.0.20.
 6504a775d5d818c9353ecc7b2697596b29f8bc05e917b6f70157492fbddd1fd5  freeipmi-1.5.4.tar.gz
 ddac6111077d0a1612247587be238c5294dd0ee4d76dc7ba783cc55fb0337071  libgcrypt-1.7.3.tar.bz2
 9268e1cc487de5e6e4460fca612a06e4f383072ac43ae90603e5e46783d3e540  libgpg-error-1.24.tar.bz2
-0404d1c6ee6b3ddd811722b5197944758d37b4591c216030effbac204f5a6c23  gdb-7.7.tar.bz2
-6c396271a8c1ddd5a6fb9abe714ea1e8a86fce85b30ab26b4266aeb4c2413b42  valgrind-3.11.0.tar.bz2
-e86a5f6cd8f941f67f3e4b28f4e60f3d9185c951cf266404533210a2e5cd8152  strace-4.11.tar.xz
+834ff3c5948b30718343ea57b11cbc3235d7995c6a4f3a5cecec8c8114164f94  gdb-7.12.tar.xz
+67ca4395b2527247780f36148b084f5743a68ab0c850cb43e4a5b4b012cf76a1  valgrind-3.12.0.tar.bz2
+5bed5110b243dce6864bedba269446c18c8c63f553cdd7fd4f808d89a764712f  strace-4.14.tar.xz
 89e8bb080130bc6ce148573ba5bb91bfe30236b64b1b5bbca26515d4b5c945bc  smartmontools-6.5.tar.gz
 dbb35dbf5f0c1749168c86c913fe98e872247bfc8425314b494c2423e7e43342  cryptsetup-1.7.2.tar.xz
 e728ed296fe9f069a0e005003c3d6b2dde3d9cad453422a10d6558616d304cc8  popt-1.16.tar.gz
