@@ -16,7 +16,7 @@ my $dhcp_prog = "/sbin/udhcpc";
 my $ifconfig_prog = "/sbin/ifconfig";
 my $route_prog = "/sbin/route";
 my $hostname_prog = "/bin/hostname";
-my $ip_prog = "/bin/ip";
+my $ip_prog = "/sbin/ip";
 my $ifenslave_prog = "/sbin/ifenslave";
 my $brctl_prog = "/usr/sbin/brctl";
 my $ethtool_prog = "/usr/sbin/ethtool";
