@@ -1,3 +1,7 @@
+2016-10-28  Marc A. Smith  <marc.smith@parodyne.com>
+
+	updated a few more optional packages (gdb, valgrind, and strace); fix for ntpd to keep it from entering an endless loop; updated new path for the ip utility in the rc.network script
+
 2016-10-27  Marc A. Smith  <marc.smith@parodyne.com>
 
 	re-enabled the ib_qib driver; removed un-needed ib_srpt module option in modprobe.conf
